Issue #3258904 by Anna Demianik, joachim, saschaeggi: Edit button overlaps remove button on Gin theme

--- a/styles/components/media_library.scss
+++ b/styles/components/media_library.scss
@@ -1,3 +1,52 @@
+.media-library {
+  &-edit__link,
+  &-item &-item__edit,
+  &-item &-item__remove,
+  &-item &-item__remove.button {
+    border-color: var(--colorGinBorder) !important;
+
+    &:link,
+    &:hover,
+    &:focus,
+    &:active,
+    &:not(:hover):not(:checked) {
+      border-color: transparent !important;
+    }
+
+    &:hover,
+    &:focus,
+    &:active {
+      box-shadow: 0 0 0 1px var(--colorGinFocusBorder),
+                  0 0 0 4px var(--colorGinFocus) !important;
+    }
+
+    &,
+    &:hover,
+    &:focus,
+    &:active {
+      width: 32px;
+      height: 32px;
+      margin: .75rem;
+      background-color: white;
+      border-radius: 50%;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, .15);
+      box-sizing: border-box;
+    }
+  }
+
+  &-edit__link,
+  &-item &-item__edit {
+    top: .625rem;
+    right: 3.125rem;
+    background-image: icon('media-edit');
+    background-size: .75rem .75rem;
+  }
+
+  &-item &-item__remove {
+    background-image: icon('media-remove');
+  }
+}
+
 .media-library-item {
   background: none;
 
@@ -90,49 +139,6 @@
   &.is-active &__preview {
     border-color: var(--colorGinPrimary);
     box-shadow: 0 0 0 2px var(--colorGinPrimary);
-  }
-
-  & &__edit,
-  & &__remove,
-  & &__remove.button {
-    border-color: var(--colorGinBorder) !important;
-
-    &:link,
-    &:hover,
-    &:focus,
-    &:active,
-    &:not(:hover):not(:checked) {
-      border-color: transparent !important;
-    }
-
-    &:hover,
-    &:focus,
-    &:active {
-      box-shadow: 0 0 0 1px var(--colorGinFocusBorder),
-                  0 0 0 4px var(--colorGinFocus) !important;
-    }
-
-    &,
-    &:hover,
-    &:focus,
-    &:active {
-      width: 32px;
-      height: 32px;
-      margin: .75rem;
-      background-color: white;
-      border-radius: 50%;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, .15);
-      box-sizing: border-box;
-    }
-  }
-
-  & &__edit {
-    right: 3.125rem;
-    background-image: icon('media-edit');
-  }
-
-  & &__remove {
-    background-image: icon('media-remove');
   }
 
   &__click-to-select-checkbox .form-boolean {
