--- a/styles/components/toolbar.scss
+++ b/styles/components/toolbar.scss
@@ -655,6 +655,7 @@ body.gin--classic-toolbar {
 
 #admin-toolbar-search-tab .js-form-type-search {
   position: relative;
+  margin: 5px 0;
 
   &::before {
     content: "";
